Update viewport meta tag and script imports

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Video to Portfolio</title>
+  <link rel="icon" href="data:,">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-neutral-950">
@@ -11,10 +12,10 @@
   <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19/?dev",
+    "react": "https://esm.sh/react@19?dev",
     "react-dom/client": "https://esm.sh/react-dom@19/client?dev",
-    "lucide-react": "https://esm.sh/lucide-react",
-    "jszip": "https://esm.sh/jszip",
+    "lucide-react": "https://esm.sh/lucide-react?dev",
+    "jszip": "https://esm.sh/jszip@3.10.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/"
   }
