--- a/index.html
+++ b/index.html
@@ -2,28 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Video to Portfolio</title>
-  <link rel="icon" href="data:,">
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Babel is required to run JSX/TSX directly in the browser without a build step -->
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 <body class="bg-neutral-950">
   <div id="root"></div>
   <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19?dev",
+    "react": "https://esm.sh/react@19/?dev",
     "react-dom/client": "https://esm.sh/react-dom@19/client?dev",
-    "lucide-react": "https://esm.sh/lucide-react?dev",
-    "jszip": "https://esm.sh/jszip@3.10.1",
+    "lucide-react": "https://esm.sh/lucide-react",
+    "jszip": "https://esm.sh/jszip",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/"
   }
 }
 </script>
-  <!-- data-type="module" tells Babel to treat this as an ES module with imports -->
-  <script type="text/babel" data-type="module" data-presets="typescript,react" src="./index.tsx"></script>
+  <script type="module" src="./index.tsx"></script>
 </body>
 </html>
