Update Babel script source to version 7.26.2

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="data:,">
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Babel is required to run JSX/TSX directly in the browser without a build step -->
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script src="https://unpkg.com/@babel/standalone@7.26.2/babel.min.js"></script>
 </head>
 <body class="bg-neutral-950">
   <div id="root"></div>
